{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 17,
  "lineage": "e33d19f4-bfd1-1575-b379-898faa21fb21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "abhishek_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:internet-gateway/igw-0e2c45691af1ce263",
            "id": "igw-0e2c45691af1ce263",
            "owner_id": "380414078618",
            "region": "ap-south-1",
            "tags": {
              "Name": "abhishek_igw"
            },
            "tags_all": {
              "Name": "abhishek_igw"
            },
            "vpc_id": "vpc-031ca5127bf26b904"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:route-table/rtb-0361b993bddd2b2d3",
            "id": "rtb-0361b993bddd2b2d3",
            "owner_id": "380414078618",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2c45691af1ce263",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-031ca5127bf26b904"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "rtb-0361b993bddd2b2d3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.abhishek_igw",
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fda4de0fc53bdec",
            "region": "ap-south-1",
            "route_table_id": "rtb-0361b993bddd2b2d3",
            "subnet_id": "subnet-02829c8822b8344ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.abhishek_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.abhishek_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d913679ab85e76c",
            "region": "ap-south-1",
            "route_table_id": "rtb-0361b993bddd2b2d3",
            "subnet_id": "subnet-0ee15c6aa51f7a172"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.abhishek_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.abhishek_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:security-group/sg-0c15dfb0a96c829f4",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c15dfb0a96c829f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound traffic on port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound traffic on port 3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound traffic on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "380414078618",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031ca5127bf26b904"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "sg-0c15dfb0a96c829f4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:subnet/subnet-02829c8822b8344ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02829c8822b8344ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380414078618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-031ca5127bf26b904"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "subnet-02829c8822b8344ef",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.abhishek_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:subnet/subnet-0ee15c6aa51f7a172",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee15c6aa51f7a172",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380414078618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-031ca5127bf26b904"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "subnet-0ee15c6aa51f7a172",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.abhishek_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "abhishek_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:vpc/vpc-031ca5127bf26b904",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07bdcb43f38f44491",
            "default_route_table_id": "rtb-0c0655f5095f8d2ce",
            "default_security_group_id": "sg-06bcd4054febedc5c",
            "dhcp_options_id": "dopt-090126b633b16d643",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031ca5127bf26b904",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0655f5095f8d2ce",
            "owner_id": "380414078618",
            "region": "ap-south-1",
            "tags": {
              "Name": "abhishek_vpc"
            },
            "tags_all": {
              "Name": "abhishek_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}